# libedio24

./: .appveyor.yml  .travis.yml  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  gcov-tool-clang
codeblocks/: edio24cli.cbp  edio24sim.cbp  gencctcmd.cbp
doc/: Doxyfile.in  Makefile.am  cndoc.tex  genfooter.tex  genheader.tex
include/: libedio24.h
src/: Makefile.am  libedio24.c  libedio24.pc.in
utils/: Makefile.am  edio24cli.c  edio24sim.c  gencctcmd.c  testcmds.txt  utils.c  utils.h
wireshark/: README.md  edio24.fdesc  edio24.wsgd
